# docs/openapi.yaml
@@ -63,7 +63,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/Orders'
         '400':
-          $ref: '#/components/responses/InvalidOrdersInput'
+          $ref: '#/components/responses/InvalidOrderInput'
   /orders/{id}:
     get:
       security:
@@ -185,7 +185,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/Trucks'
         '400':
-          $ref: '#/components/responses/InvalidTrucksInput'
+          $ref: '#/components/responses/InvalidTruckInput'
   /trucks/{id}:
     get:
       security:
@@ -307,7 +307,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/Routes'
         '400':
-          $ref: '#/components/responses/InvalidRoutesInput'
+          $ref: '#/components/responses/InvalidRouteInput'
   /routes/{id}:
     get:
       security:
@@ -501,9 +501,6 @@ components:
             shippingAddress:
               type: string
               example: '123 Example St'
-            truck: 
-              type: integer
-              example: 1
     Orders:
       type: object
       properties:
@@ -547,12 +544,9 @@ components:
         name: 
           type: string
           example: 'Truck1'
-        licenceNumber:
+        licenseNumber:
           type: string
           example: 'TRK-001'
-        driverId:
-          type: integer
-          example: 1
 
     UpdatedRoutes:
       type: object
@@ -572,9 +566,6 @@ components:
         street:
           type: string
           example: 'I 95'
-        driverId: 
-          type: integer
-          example: 1
 
   parameters: 
     ResourceId:
@@ -749,7 +740,7 @@ components:
             example:
               errors:
                 - 'Name must be at least 3 characters'   
-    InvalideUpRouteInput:
+    InvalidUpRouteInput:
       description: Bad request due to invalid data
       content: 
         application/json:
