# src/controllers/orderController.js
@@ -12,15 +12,15 @@ export async function getOrderByIdHandler(req, res) {
 }
 
 export async function createOrderHandler(req, res) {
-    const {name, price, shippingAddress, truckId} = req.body;
-    const newOrder = await createOrder({name, price, shippingAddress, truckId, truck: {connect: {id: truckId}}, user: {connect: {id: req.user.id}}});
+    const {name, price, truck, shippingAddress} = req.body;
+    const newOrder = await createOrder({name, price, shippingAddress, truck, user: req.user.id});
     res.status(201).json(newOrder);
 }
 
 export async function updateOrderHandler(req, res){
     const id = parseInt(req.params.id);
     const {name, price, shippingAddress} = req.body;
-    const updatedOrder = await updatedOrder(id, {name, price, shippingAddress});
+    const updatedOrder = await updateOrder(id, {name, price, shippingAddress});
     res.status(200).json(updatedOrder);
 }
 
